# chip8

./: .clang-format  .editorconfig  .gitignore  .justfile  CMakeLists.txt  README.md  shell.nix
.github/workflows/: clang-format.yml
examples/: CMakeLists.txt
examples/invaders/: CMakeLists.txt
examples/invaders/src/: invaders.cpp
include/: constants.hpp  cpu.hpp  display.hpp  keypad.hpp  life.h  mapper.hpp  memory.hpp
include/chip8/: chip8.hpp  constants.hpp  cpu.hpp  display.hpp  keypad.hpp  mapper.hpp
scripts/: format.sh
src/: cpu.cpp  display.cpp  keypad.cpp  life.c  main.c  main.cpp  mapper.cpp  memory.cpp
